--- a/local.yml
+++ b/local.yml
@@ -1,30 +1,105 @@
 - hosts: localhost
   become: true
   pre_tasks:
+    - name: update apt cache
+      apt:
+        update_cache: true
+        cache_valid_time: 3600
+      tags:
+        - update
   vars:
+    user: "{{ansible_user_id}}"
   tasks:
     - name: Install Zsh
       apt: name=zsh
       tags:
-      - zsh
-      - dotfiles
+        - zsh
+        - dotfiles
 
     - name: Change default shell to Zsh
-      shell: chsh -s 'which zsh'
+      user:
+        name: "{{ user }}"
+        shell: /bin/zsh
       tags:
-      - zsh
-      - dotfiles
+        - zsh
+        - dotfiles
 
     - name: Download Starship prompt
       ansible.builtin.get_url:
-        url: 
+        url: https://starship.rs/install.sh
+        dest: /tmp/starship-install.sh
       tags:
-      - zsh
-      - starship
+        - zsh
+        - starship
+        - dotfiles
+
+    - name: Grant execute permissions to Starship install script
+      ansible.builtin.file:
+        path: /tmp/starship-install.sh
+        mode: 0755
+      tags:
+        - zsh
+        - starship
+        - dotfiles
+
+    - name: Install Starship prompt
+      ansible.builtin.command: /tmp/starship-install.sh -y
+      args:
+        creates: /usr/local/bin/starship
+      tags:
+        - zsh
+        - starship
+        - dotfiles
 
     - name: Install zsh plugin autoSuggestions
       ansible.builtin.git:
         repo: https://github.com/zsh-users/zsh-autosuggestions.git
         dest: ~/.zsh/zsh-autosuggestions
-    
-    
+        version: master
+      tags:
+        - zsh
+        - zsh-autosuggestions
+
+    - name: Install zsh plugin syntax highlighting
+      ansible.builtin.git:
+        repo: https://github.com/zsh-users/zsh-syntax-highlighting.git
+        dest: ~/.zsh/zsh-syntax-highlighting
+        version: master
+      tags:
+        - zsh
+        - zsh-syntax-highlighting
+
+    - name: install node
+      apt:
+        name: [nodejs, npm]
+        state: present
+      tags:
+        - nodejs
+
+    - name: install n
+      npm:
+        name: n
+        global: true
+      tags:
+        - nodejs
+
+    - name: install latest node
+      changed_when: false
+      ansible.builtin.command: n latest
+      tags:
+        - nodejs
+
+    - name: install pnpm
+      npm:
+        name: pnpm
+        global: true
+      tags:
+        - nodejs
+
+    - name: install node 12.14.0
+      changed_when: false
+      ansible.builtin.command: n 12.14.0
+      tags:
+        - nodejs
+
+    -
