--- a/local.yml
+++ b/local.yml
@@ -10,7 +10,7 @@
   vars:
     user: "{{ansible_user_id}}"
     source_key: "./.ssh/id_rsa"
-    dist_key: "{{ lookup('env', 'HOME') }}/.ssh/id_rsa"
+    dest_key: "{{ lookup('env', 'HOME') }}/.ssh/id_rsa"
   tasks:
     - include: ./tasks/ssh.yml
     - include: ./tasks/zsh.yml
