feat: added github cli installation

--- a/local.yml
+++ b/local.yml
@@ -14,6 +14,7 @@
   tasks:
     - include: ./tasks/ssh.yml
     - include: ./tasks/zsh.yml
+    - include: ./tasks/gh.yml
     - include: ./tasks/starship.yml
     - include: ./tasks/node.yml
 
